Fixed linter issues

--- a/vignettes/benchmark-change-settings.html
+++ b/vignettes/benchmark-change-settings.html
@@ -417,6 +417,33 @@ settings as an additional argument:</p>
 results for the new metrics. Also note the large map highlighting the
 time averaged soil temperature distribution at the beginning of the
 “Time Average” section.</p>
+<p>The following is a more complex example where I modified the outputs,
+metrics and time period for a run with POEM LPJml:</p>
+<pre><code>library(lpjmlstats)
+
+# --- adapt the default settings to the POEM outputs
+settings &lt;- lpjmlstats::default_settings # get the default settings list
+names(settings) # check which outputs are analyzed
+settings &lt;- settings[-c(4:16,22,28)] # remove some outputs that are not available in POEM
+settings &lt;- lapply(settings, function(x) c(x[-3], TimeAvgMapWithAbs)) # remove the TimeAvgMap and add TimeAvgMapWithAbs
+
+# --- adjust the time period
+metric_names &lt;- unique(unname(unlist(
+                    lapply(settings, function(x) lapply(x, function(x) x$classname))
+                ))) # get all the metric names that where used
+mopt &lt;- sapply(metric_names, 
+               FUN = function(x) list(year_subset = as.character(1961:1975)), 
+               simplify = FALSE) # set the year subset for all metrics
+
+# ---- add subheadings to the maps
+mopt[[&quot;TimeAvgMapWithAbs&quot;]] &lt;- c(mopt[[&quot;TimeAvgMapWithAbs&quot;]], list(var_subheading = TRUE)) 
+
+# --- run the benchmark
+benchmark(list(&quot;1.1&quot; = &quot;/p/projects/path/to/baseline&quot;),
+          list(&quot;1.2&quot; = &quot;/p/projects/path/to/under_test&quot;),
+          metric_options = mopt,
+          settings = settings
+          )</code></pre>
 <p>This concludes the vignette.</p>
 
 
